--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="form_surname">form surname</string>
     <string name="email">Email</string>
     <string name="project_on_github_link">Project on GITHUB (link)</string>
+    <string name="splash_screen">splash_screen</string>
 </resources>
