--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="name">Name</string>
-    <string name="form_surname">form surname</string>
+    <string name="form_surname">Surname</string>
     <string name="email">Email</string>
     <string name="project_on_github_link">Project on GITHUB (link)</string>
     <string name="splash_screen">splash_screen</string>
